# mkdocstr

./: README.md  build_langs.py  pyproject.toml
mkdocstr/: cli.py  docstring_generator.py  tree_utils.py  ttypes.py  utils.py
mkdocstr/langs/: __init__.py  python.py
mkdocstr/output_styles/: __init__.py  base.py  yasnippet.py
templates/: py_google
test_files/: python.py
tests/: test_parser.py  test_python.py  test_utils.py
