[tool.poetry]
name = "mkdocstr"
version = "0.1.0"
description = ""
authors = ["Jethro Kuan <jethrokuan95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tree-sitter = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkdocstr = 'mkdocstr.cli:main'
