[tool.poetry]
name = "mkdocstr"
version = "0.1.3"
description = ""
authors = ["Jethro Kuan <jethrokuan95@gmail.com>"]
include = ["mkdocstr/languages.so"]

[tool.poetry.dependencies]
python = "^3.8"
tree-sitter = "^0.20.0"
attrs = "^21.4.0"
Mako = "^1.1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkdocstr = 'mkdocstr.cli:main'
